# reviewr

./: .dockerignore  .gitignore  .gitlab-ci-reviewr.yml  .gitlab-ci.yml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  CHANGELOG.md  CHANGES_SUMMARY.md  Dockerfile  GITLAB_SETUP.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  USAGE_GUIDE.md  demo_code.py  demo_gitlab_integration.py  demo_go_analysis.py  demo_javascript_analysis.py  demo_new_features.py  demo_policy_engine.py  demo_rust_analysis.py  gitlab-ci-simple.yml  integration-test-report.html  pyproject.toml  pytest.ini  run_all_tests.py  setup.py  test-report.html  test_api_efficiency.py  test_autofix.py  test_azure_devops_integration.py  test_bitbucket_integration.py  test_circleci_integration.py  test_cli_integration.py  test_dashboard_upload.py  test_diff_analyzer.py  test_email_integration.py  test_end_to_end.py  (+9 more)
.azure-pipelines/: azure-pipelines.yml
.bitbucket/: bitbucket-pipelines.yml
.github/workflows/: reviewr.yml
circleci-examples/.circleci/: config.yml
circleci-orb/: orb.yml
demos/: demo_java_analysis.py
docs/: AUTO_FIX_GUIDE.md  AZURE_DEVOPS_INTEGRATION.md  BITBUCKET_INTEGRATION.md  CHANGELOG.md  CIRCLECI_INTEGRATION.md  CI_CD_INTEGRATION.md  CODE_METRICS.md  CONFIGURATION_PRESETS.md  DASHBOARD_GUIDE.md  DASHBOARD_INTEGRATION.md  EMAIL_INTEGRATION.md  ENTERPRISE_POLICY_ENGINE.md  INCREMENTAL_ANALYSIS.md  INTELLIJ_PLUGIN_IMPLEMENTATION.md  JENKINS_INTEGRATION.md  PUBLISHING.md  QUICK_START_CI_CD.md  SECURITY_SCANNING.md  SLACK_INTEGRATION.md  TEAMS_INTEGRATION.md  USAGE_GUIDE.md
email-examples/: aws-ses-config.sh  cron-digest.sh  github-actions.yml  sendgrid-config.sh  smtp-config.sh
intellij-plugin/: README.md  build.gradle.kts
jenkins-examples/: Jenkinsfile.declarative  Jenkinsfile.scripted
policy-examples/: production-ready.yaml  security-critical.yaml  security-review-required.yaml
reviewr/: __init__.py  cli.py  cli_autofix.py  cli_azure.py  cli_bitbucket.py  cli_circleci.py  cli_dashboard.py  cli_email.py  cli_fix.py  cli_github.py  cli_gitlab.py  cli_jenkins.py  cli_learning.py  cli_policy.py  cli_presets.py  cli_slack.py  cli_teams.py  interactive.py  pre_commit_hook.py
reviewr/analysis/: __init__.py  analyzer_factory.py  base.py  complexity_analyzer.py  dataflow_analyzer.py  diff_analyzer.py  go_performance_analyzer.py  go_quality_analyzer.py  go_security_analyzer.py  go_unified_analyzer.py  java_concurrency_analyzer.py  java_performance_analyzer.py  java_quality_analyzer.py  java_security_analyzer.py  java_unified_analyzer.py  javascript_analyzer.py  javascript_performance_analyzer.py  javascript_security_analyzer.py  javascript_type_analyzer.py  javascript_unified_analyzer.py  performance_analyzer.py  python_analyzer.py  rust_ownership_analyzer.py  rust_performance_analyzer.py  rust_quality_analyzer.py  rust_safety_analyzer.py  rust_unified_analyzer.py  security_analyzer.py  semantic_analyzer.py  type_analyzer.py  unified_analyzer.py
reviewr/autofix/: __init__.py  ai_generator.py  applicator.py  base.py  batch_processor.py  javascript_fixes.py  python_fixes.py
reviewr/ci/: __init__.py  (+1 more)
scripts/: verify_installation.sh
tests/: test_advanced_analysis.py  test_advanced_metrics.py  test_ai_autofix.py  test_ci_integration.py  test_dashboard.py  test_diff_integration.py  test_enhanced_formatters.py  test_go_unified.py  test_integration_simple.py  test_java_unified.py  test_javascript_unified.py  test_jenkins_integration.py  test_learning.py  test_metrics_module.py  test_presets.py  test_reviewer_optimizations.py  test_sample_code.py  test_security_module.py  test_unified_integration.py
vscode-extension/: README.md  package-lock.json  package.json
(+66 files in other folders)
