[tool.poetry]
name = "reviewr"
version = "0.1.0"
description = "AI-powered code review CLI tool supporting multiple LLM providers"
authors = ["Clay Good <hi@claygood.com>"]
readme = "README.md"
packages = [{include = "reviewr"}]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0"
pydantic = ">=2.0"
httpx = ">=0.24"
rich = ">=13.0"
pyyaml = ">=6.0"
python-dotenv = ">=1.0"
tenacity = ">=8.0"
diskcache = ">=5.0"
anthropic = ">=0.18"
openai = ">=1.0"
google-generativeai = ">=0.3"
tomli = {version = ">=2.0.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
black = "^23.0"
ruff = "^0.1"
mypy = "^1.0"

[tool.poetry.scripts]
reviewr = "reviewr.cli:main"
reviewr-pre-commit = "reviewr.pre_commit_hook:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

